Bug 1139949 - Make the small swatch of current theme in the themes button smaller and rounded. ui-r=phlsa, r=Gijs
UltraBlame original commit: 012456b15383dc76770db1b9bd56d9c6ca3632ae

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -1246,6 +1246,49 @@ important
 #
 customization
 -
+lwtheme
+-
+button
+>
+.
+box
+-
+inherit
+>
+.
+box
+-
+inherit
+>
+.
+button
+-
+icon
+{
+width
+:
+20px
+;
+height
+:
+20px
+;
+border
+-
+radius
+:
+2px
+;
+background
+-
+size
+:
+contain
+;
+}
+#
+customization
+-
 titlebar
 -
 visibility
